# trust-pilot-parser

./: .gitignore  README.md  design.md  gen_graph.py  pyproject.toml  requirements.txt  todo.md  trustpilot_scraper.py
example/: tp_dea_reviews.json  tp_ik_reviews.json
samples/: tp_deh_reviews.json  tp_lde_reviews.json
