[project]
name = "trust-pilot-parser"
version = "0.1.0"
description = "A tool for extracting and analyzing reviews from Trustpilot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.28.2",
    "beautifulsoup4>=4.12.2",
    "selenium>=4.16.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "numpy>=1.24.0"
]
